squares/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sherbet
  namespace: sherbet
spec:
  selector:
    matchLabels:
      app: sherbet
  replicas: 3
  template:
    metadata:
      labels:
        app: sherbet
    spec:
      containers:
      - name: sherbet
        image: rarick/sherbet:squares
        ports:
          - containerPort: 80
