squares/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sherbet
  namespace: sherbet
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: sherbet
