squares/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sherbet-ingress
  namespace: sherbet
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
spec:
  tls:
    - hosts:
        - rarick.me
      secretName: sherbet-tls

  rules:
    - host: rarick.me
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: sherbet
                port:
                  number: 80
